--- a/LunarIt/package.json
+++ b/LunarIt/package.json
@@ -19,11 +19,13 @@
     "@mui/x-data-grid": "^7.26.0",
     "@tailwindcss/vite": "^4.0.5",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
     "formik": "^2.4.6",
     "mongoose": "^8.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
     "yup": "^1.6.1"
