Add new packages and update configurations; refactor environment variables and enhance Home component styling

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://shresthaniraj43:BMC%40123@tablemate.l4zz8.mongodb.net/Tablemate?retryWrites=true&w=majority&appName=TableMate
 PORT=5000
 
-Email_User="Hello World"
-Email_Pass="asdfghjkl"
+Email_User="hello"
+Email_Pass="world"
