--- a/LunarIt/package.json
+++ b/LunarIt/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "mongoose": "^8.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
